--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,3 +5,9 @@ requests==2.32.3
 python-dotenv==1.0.1
 httpx==0.27.2
 rich==13.7.1
+
+structlog>=23.0.0
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
+pyarrow>=14.0.0
+PyYAML>=6.0.0
