--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,8 +47,16 @@ full = [
     "PyYAML>=6.0.0",
     "python-dotenv>=1.0.0",
 ]
+db = [
+    "sqlalchemy>=2.0.0",
+    "alembic>=1.12.0",
+]
+api = [
+    "fastapi>=0.104.0",
+    "uvicorn>=0.24.0",
+]
 all = [
-    "mapeval[dev,full]",
+    "mapeval[dev,full,db,api]",
 ]
 
 [project.scripts]
